--- a/Base.ipynb
+++ b/Base.ipynb
@@ -186,27 +186,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 27,
       "metadata": {},
       "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "c:\\Users\\yehud\\Business Classification\\revseg\\table_candidates.py:220: XMLParsedAsHTMLWarning: It looks like you're using an HTML parser to parse an XML document.\n",
-            "\n",
-            "Assuming this really is an XML document, what you're doing might work, but you should know that using an XML parser will be more reliable. To parse this document as XML, make sure you have the Python package 'lxml' installed, and pass the keyword argument `features=\"xml\"` into the BeautifulSoup constructor.\n",
-            "\n",
-            "If you want or need to use an HTML parser on this document, you can make this warning go away by filtering it. To do that, run this code before calling the BeautifulSoup constructor:\n",
-            "\n",
-            "    from bs4 import XMLParsedAsHTMLWarning\n",
-            "    import warnings\n",
-            "\n",
-            "    warnings.filterwarnings(\"ignore\", category=XMLParsedAsHTMLWarning)\n",
-            "\n",
-            "  soup = BeautifulSoup(html_path.read_text(encoding=\"utf-8\", errors=\"ignore\"), \"lxml\")\n"
-          ]
-        },
         {
           "data": {
             "text/plain": [
@@ -215,7 +197,7 @@
               " 'data\\\\10k\\\\MSFT\\\\2025-07-30_000095017025100235\\\\primary_document.html')"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 27,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -223,9 +205,14 @@
       "source": [
         "from pathlib import Path\n",
         "import os\n",
+        "import importlib\n",
         "\n",
         "# If your SEC_USER_AGENT is already set in your environment, you can omit this.\n",
         "# os.environ[\"SEC_USER_AGENT\"] = \"RevenueSegBot/0.1 (your.email@domain.com)\"\n",
+        "\n",
+        "# Reload the module to pick up any changes\n",
+        "import revseg.table_candidates\n",
+        "importlib.reload(revseg.table_candidates)\n",
         "\n",
         "from revseg.table_candidates import (\n",
         "    find_latest_downloaded_filing_dir,\n",
@@ -256,113 +243,173 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 28,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "---- t0012 ----\n",
-            "rows x cols: 6 x 3\n",
-            "years: []\n",
-            "hits: ['revenue', 'sales', 'segment', 'segments', 'cloud', 'advertising', 'subscription', 'subscriptions', 'services']\n",
-            "heading: \n",
-            "nearby: n or 19% driven by growth in Microsoft Cloud. Gross margin increased $22.9 billion or 13% with growth across each of our segments. • Gross margin percentage decreased slightly driven by Intelligent Cloud, offset in part by More Personal Computing. • Microsoft Cloud gross margin percentage decreased \n",
-            "preview:\n",
-            "   ['', '', '']\n",
-            "   ['Windows OEM and Devices revenue growth', '', 'Revenue from sales of Windows Pro and non-Pro licenses sold through the OEM channel and sales of first-party Devices, including Surface and PC accessories']\n",
-            "   ['', '', '']\n",
-            "   ['Xbox content and services revenue growth', '', 'Revenue from Xbox content and services, comprising first- and third-party content (including games and in-game content), Xbox Game Pass and other subscriptions, Xbox Cloud Gaming, advertising, and other cloud services']\n",
-            "   ['', '', '']\n",
-            "   ['Search and news advertising revenue (ex TAC) growth', '', 'Revenue from search and news advertising excluding traffic acquisition costs (“TAC”) paid to Bing Ads network publishers and news partners']\n",
+            "Top 10 financial table candidates (ranked by financial table signals):\n",
             "\n",
-            "---- t0011 ----\n",
-            "rows x cols: 14 x 3\n",
-            "years: []\n",
-            "hits: ['revenue', 'segment', 'segments', 'cloud', 'subscription', 'subscriptions', 'services']\n",
-            "heading: \n",
-            "nearby:  revenue and revenue growth Revenue from Microsoft 365 Commercial cloud, Azure and other cloud services, the commercial portion of LinkedIn, and Dynamics 365 Microsoft Cloud revenue and revenue growth Revenue from Microsoft 365 Commercial cloud, Azure and other cloud services, the commercial portion\n",
-            "preview:\n",
-            "   ['', '', '']\n",
-            "   ['Microsoft 365 Commercial cloud revenue growth', '', 'Revenue from Microsoft 365 Commercial subscriptions, comprising Microsoft 365 Commercial, Enterprise Mobility + Security, the cloud portion of Windows Commercial, the per-user portion of Power BI, Exchange, SharePoint, Microsoft Teams, Microsoft 365 Security and Compliance, and Microsoft 365 Copilot']\n",
-            "   ['', '', '']\n",
-            "   ['Microsoft 365 Commercial seat growth', '', 'The number of Microsoft 365 Commercial seats at end of period where seats are paid users covered by a Microsoft 365 Commercial subscription']\n",
-            "   ['', '', '']\n",
-            "   ['Microsoft 365 Consumer cloud revenue growth', '', 'Revenue from Microsoft 365 Consumer subscriptions and other consumer services']\n",
-            "   ['', '', '']\n",
-            "   ['Microsoft 365 Consumer subscribers', '', 'The number of Microsoft 365 Consumer subscribers at end of period']\n",
-            "\n",
-            "---- t0013 ----\n",
-            "rows x cols: 11 x 13\n",
-            "years: [2024, 2025]\n",
-            "hits: ['revenue', 'cloud', 'advertising', 'subscription', 'subscriptions', 'services']\n",
-            "heading: \n",
-            "nearby: ding games and in-game content), Xbox Game Pass and other subscriptions, Xbox Cloud Gaming, advertising, and other cloud services Xbox content and services revenue growth Revenue from Xbox content and services, comprising first- and third-party content (including games and in-game content), Xbox Gam\n",
-            "preview:\n",
-            "   ['', '', '', '', '', '', '', '']\n",
-            "   ['(In millions, except percentages and per share amounts)', '', '2025', '', '', '2024', '', '']\n",
-            "   ['', '', '', '', '', '', '', '']\n",
-            "   ['', '', '', '', '', '', '', '']\n",
-            "   ['Revenue', '', '$', '281,724', '', '', '$', '245,122']\n",
-            "   ['Gross margin', '', '', '193,893', '', '', '', '171,008']\n",
-            "   ['Operating income', '', '', '128,528', '', '', '', '109,433']\n",
-            "   ['Net income', '', '', '101,832', '', '', '', '88,136']\n",
-            "\n",
-            "---- t0073 ----\n",
-            "rows x cols: 20 x 13\n",
-            "years: [2023, 2024, 2025]\n",
-            "hits: ['revenue', 'cloud', 'services', 'total', 'year ended']\n",
-            "heading: \n",
-            "nearby: ertising 13,878 12,306 12,125 Dynamics products and cloud services 7,827 6,831 5,796 Enterprise and partner services 7,760 7,594 7,900 Microsoft 365 Consumer products and cloud services 7,404 6,648 6,417 Other 72 45 119 Total $ 281,724 $ 245,122 $ 211,915 Our Microsoft Cloud revenue, which includes \n",
-            "preview:\n",
-            "   ['', '', '', '', '', '', '', '']\n",
-            "   ['(In millions)', '', '', '']\n",
-            "   ['', '']\n",
-            "   ['', '', '', '', '']\n",
-            "   ['Year Ended June 30,', '', '2025', '', '', '2024', '', '']\n",
-            "   ['', '', '', '']\n",
-            "   ['Server products and cloud services', '', '$', '98,435', '', '', '$', '79,828']\n",
-            "   ['Microsoft 365 Commercial products and cloud services', '', '', '87,767', '', '', '', '76,969']\n",
-            "\n",
-            "---- t0071 ----\n",
+            "t0073 year_header= True units= True money= 0.194 numeric= 0.194 years= [2023, 2024, 2025] labels= ['(In millions)', 'Year Ended June 30,', 'Server products and cloud services']\n",
+            "t0042 year_header= True units= True money= 0.17 numeric= 0.149 years= [2023, 2024, 2025] labels= ['(In millions)', 'June 30,', 'Land']\n",
+            "t0029 year_header= True units= True money= 0.154 numeric= 0.096 years= [2023, 2024, 2025] labels= ['(In millions)', 'Year Ended June 30,', 'Interest and dividends income']\n",
+            "t0055 year_header= True units= True money= 0.151 numeric= 0.151 years= [2024, 2025] labels= ['(In millions)', 'June 30,', 'Deferred Income Tax Assets']\n",
+            "t0018 year_header= True units= True money= 0.148 numeric= 0.148 years= [2024, 2025] labels= ['(In millions)', 'Year Ended June 30,', 'Interest and dividends income']\n",
+            "t0050 year_header= True units= True money= 0.142 numeric= 0.142 years= [2009, 2010, 2021, 2023, 2024, 2026, 2030, 2039, 2040, 2050, 2052, 2060, 2062] labels= ['(In millions, issuance by calendar year)', '2009 issuance of $ 3.8 billion', '2010 issuance of $ 4.8 billion']\n",
+            "t0056 year_header= True units= True money= 0.138 numeric= 0.138 years= [2023, 2024, 2025] labels= ['(In millions)', 'Year Ended June 30,', 'Beginning unrecognized tax benefits']\n",
+            "t0013 year_header= True units= True money= 0.136 numeric= 0.136 years= [2024, 2025] labels= ['(In millions, except percentages and per share amounts)', 'Revenue', 'Gross margin']\n",
+            "t0027 year_header= True units= True money= 0.135 numeric= 0.115 years= [2024, 2025] labels= ['(In millions, except per share amounts)', 'Year Ended June 30,', 'Common stock and paid-in capital']\n",
+            "t0026 year_header= True units= True money= 0.132 numeric= 0.094 years= [2024, 2025] labels= ['(In millions)', 'Year Ended June 30,', 'Operations']\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Deterministic \"financial table\" ranking - prioritizes tables with year headers, units, and money cells\n",
+        "ranked = sorted(\n",
+        "    candidates,\n",
+        "    key=lambda c: (\n",
+        "        c.has_year_header,\n",
+        "        c.has_units_marker,\n",
+        "        c.money_cell_ratio,\n",
+        "        c.numeric_cell_ratio,\n",
+        "        len(c.keyword_hits),\n",
+        "        c.n_rows * c.n_cols,\n",
+        "    ),\n",
+        "    reverse=True,\n",
+        ")\n",
+        "\n",
+        "print(\"Top 10 financial table candidates (ranked by financial table signals):\\n\")\n",
+        "for c in ranked[:10]:\n",
+        "    print(\n",
+        "        c.table_id,\n",
+        "        \"year_header=\", c.has_year_header,\n",
+        "        \"units=\", c.has_units_marker,\n",
+        "        \"money=\", round(c.money_cell_ratio, 3),\n",
+        "        \"numeric=\", round(c.numeric_cell_ratio, 3),\n",
+        "        \"years=\", c.detected_years,\n",
+        "        \"labels=\", c.row_label_preview[:3],\n",
+        "    )\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 29,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "table_id: t0071\n",
             "rows x cols: 45 x 13\n",
-            "years: [2024, 2025]\n",
-            "hits: ['revenue', 'segment', 'cloud', 'total', 'year ended']\n",
+            "has_year_header: True\n",
+            "detected_years: [2024, 2025]\n",
+            "has_units_marker: True\n",
+            "units_hint: (In millions)\n",
+            "numeric_cell_ratio: 0.09259259259259259\n",
+            "money_cell_ratio: 0.09259259259259259\n",
+            "row_label_preview (first 10): ['(In millions)', 'Year Ended June 30,', 'Productivity and Business Processes', 'Revenue', 'Cost of revenue', 'Operating expenses', 'Operating Income']\n",
             "heading: \n",
-            "nearby: Revenue $ 120,810 $ 106,820 $ 94,151 Cost of revenue 22,422 19,611 17,202 Operating expenses 28,615 27,548 26,875 Operating Income $ 69,773 $ 59,661 $ 50,074 Intelligent Cloud Revenue $ 106,265 $ 87,464 $ 72,944 Cost of revenue 40,171 29,611 24,109 Operating expenses 21,505 20,040 20,424 Operating I\n",
-            "preview:\n",
-            "   ['', '', '', '', '', '', '', '']\n",
-            "   ['(In millions)', '', '', '', '', '', '', '']\n",
-            "   ['', '']\n",
-            "   ['', '']\n",
-            "   ['Year Ended June 30,', '', '', '2025', '', '', '', '2024']\n",
-            "   ['', '', '', '', '', '', '', '']\n",
-            "   ['Productivity and Business Processes', '', '', '', '', '', '', '']\n",
-            "   ['', '', '', '', '', '', '', '']\n",
+            "caption: \n",
+            "\n",
+            "table_id: t0073\n",
+            "rows x cols: 20 x 13\n",
+            "has_year_header: True\n",
+            "detected_years: [2023, 2024, 2025]\n",
+            "has_units_marker: True\n",
+            "units_hint: (In millions)\n",
+            "numeric_cell_ratio: 0.1941747572815534\n",
+            "money_cell_ratio: 0.1941747572815534\n",
+            "row_label_preview (first 10): ['(In millions)', 'Year Ended June 30,', 'Server products and cloud services', 'Microsoft 365 Commercial products and cloud services', 'Gaming', 'LinkedIn', 'Windows and Devices', 'Search and news advertising', 'Dynamics products and cloud services', 'Enterprise and partner services']\n",
+            "heading: \n",
+            "caption: \n",
             "\n"
           ]
         }
       ],
       "source": [
-        "# Simple heuristic: prioritize candidates with more keyword hits and more detected years\n",
-        "ranked = sorted(\n",
-        "    candidates,\n",
-        "    key=lambda c: (len(c.keyword_hits), len(c.detected_years), c.n_rows * c.n_cols),\n",
-        "    reverse=True,\n",
-        ")\n",
-        "\n",
-        "for c in ranked[:5]:\n",
-        "    print(\"----\", c.table_id, \"----\")\n",
+        "# Find and print diagnostics for specific table_ids (the actual financial tables)\n",
+        "def show(table_id: str):\n",
+        "    c = next(x for x in candidates if x.table_id == table_id)\n",
+        "    print(\"table_id:\", c.table_id)\n",
         "    print(\"rows x cols:\", c.n_rows, \"x\", c.n_cols)\n",
-        "    print(\"years:\", c.detected_years)\n",
-        "    print(\"hits:\", c.keyword_hits)\n",
+        "    print(\"has_year_header:\", c.has_year_header)\n",
+        "    print(\"detected_years:\", c.detected_years)\n",
+        "    print(\"has_units_marker:\", c.has_units_marker)\n",
+        "    print(\"units_hint:\", c.units_hint)\n",
+        "    print(\"numeric_cell_ratio:\", c.numeric_cell_ratio)\n",
+        "    print(\"money_cell_ratio:\", c.money_cell_ratio)\n",
+        "    print(\"row_label_preview (first 10):\", c.row_label_preview[:10])\n",
         "    print(\"heading:\", c.heading_context[:200])\n",
-        "    print(\"nearby:\", c.nearby_text_context[:300].replace(\"\\n\", \" \"))\n",
-        "    print(\"preview:\")\n",
-        "    for r in c.preview[:8]:\n",
-        "        print(\"  \", r)\n",
-        "    print()\n"
+        "    print(\"caption:\", c.caption_text[:200])\n",
+        "    print()\n",
+        "\n",
+        "show(\"t0071\")\n",
+        "show(\"t0073\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 31,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "C:\\Users\\yehud\\AppData\\Local\\Temp\\ipykernel_36112\\2417644637.py:11: XMLParsedAsHTMLWarning: It looks like you're using an HTML parser to parse an XML document.\n",
+            "\n",
+            "Assuming this really is an XML document, what you're doing might work, but you should know that using an XML parser will be more reliable. To parse this document as XML, make sure you have the Python package 'lxml' installed, and pass the keyword argument `features=\"xml\"` into the BeautifulSoup constructor.\n",
+            "\n",
+            "If you want or need to use an HTML parser on this document, you can make this warning go away by filtering it. To do that, run this code before calling the BeautifulSoup constructor:\n",
+            "\n",
+            "    from bs4 import XMLParsedAsHTMLWarning\n",
+            "    import warnings\n",
+            "\n",
+            "    warnings.filterwarnings(\"ignore\", category=XMLParsedAsHTMLWarning)\n",
+            "\n",
+            "  soup = BeautifulSoup(html_path.read_text(encoding=\"utf-8\", errors=\"ignore\"), \"lxml\")\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Nearest heading: \n",
+            "Nearby context: ertising 13,878 12,306 12,125 Dynamics products and cloud services 7,827 6,831 5,796 Enterprise and partner services 7,760 7,594 7,900 Microsoft 365 Consumer products and cloud services 7,404 6,648 6,417 Other 72 45 119 Total $ 281,724 $ 245,122 $ 211,915 Our Microsoft Cloud revenue, which includes Microsoft 365 Commercial cloud, Azure and other cloud services, the commercial portion of LinkedIn, and Dynamics 365, was $ 168.9 billion, $ 137.7 billion, and $ 111.6 billion in fiscal years 2025, 2024, and 2023, respectively. These amounts are included in Microsoft 365 Commercial products and cloud services, Server products and cloud services, LinkedIn, and Dynamics products and cloud services in the table above. Revenue, classified by significant product and service offerings, was as follows:\n",
+            "\n",
+            "--- Table text (first ~40 lines) ---\n",
+            "(In millions) Year Ended June 30, 2025 2024 2023 Server products and cloud services $ 98,435 $ 79,828 $ 65,007 Microsoft 365 Commercial products and cloud services 87,767 76,969 66,949 Gaming 23,455 21,503 15,466 LinkedIn 17,812 16,372 14,989 Windows and Devices 17,314 17,026 17,147 Search and news advertising 13,878 12,306 12,125 Dynamics products and cloud services 7,827 6,831 5,796 Enterprise and partner services 7,760 7,594 7,900 Microsoft 365 Consumer products and cloud services 7,404 6,648 6,417 Other 72 45 119 Total $ 281,724 $ 245,122 $ 211,915\n"
+          ]
+        }
+      ],
+      "source": [
+        "from bs4 import BeautifulSoup\n",
+        "from pathlib import Path\n",
+        "import revseg.table_candidates as tc\n",
+        "\n",
+        "ticker = \"MSFT\"\n",
+        "base_dir = Path(\"data/10k\")\n",
+        "\n",
+        "filing_dir = tc.find_latest_downloaded_filing_dir(base_dir, ticker)\n",
+        "html_path = tc.find_primary_document_html(filing_dir)\n",
+        "\n",
+        "soup = BeautifulSoup(html_path.read_text(encoding=\"utf-8\", errors=\"ignore\"), \"lxml\")\n",
+        "tables = soup.find_all(\"table\")\n",
+        "\n",
+        "table_id = \"t0073\"\n",
+        "idx = int(table_id[1:])  # 73\n",
+        "tbl = tables[idx]\n",
+        "\n",
+        "print(\"Nearest heading:\", tc._nearest_heading_text(tbl))\n",
+        "print(\"Nearby context:\", tc._collect_nearby_text(tbl)[:1200])\n",
+        "\n",
+        "print(\"\\n--- Table text (first ~40 lines) ---\")\n",
+        "lines = tc._clean_text(tbl.get_text(\"\\n\", strip=True)).split(\"\\n\")\n",
+        "for line in lines[:40]:\n",
+        "    print(line)\n"
       ]
     }
   ],
