Add ReAct pipeline with Item 8 soft preference, snippet retrieval, and trace logging

--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -2,16 +2,126 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3d1f55e3",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch main\n",
+      "Your branch is up to date with 'origin/main'.\n",
+      "\n",
+      "Changes not staged for commit:\n",
+      "  (use \"git add <file>...\" to update what will be committed)\n",
+      "  (use \"git restore <file>...\" to discard changes in working directory)\n",
+      "\tmodified:   Base.ipynb\n",
+      "\tmodified:   revseg/table_candidates.py\n",
+      "\n",
+      "Untracked files:\n",
+      "  (use \"git add <file>...\" to include in what will be committed)\n",
+      "\tscratch.ipynb\n",
+      "\n",
+      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: in the working copy of 'Base.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'scratch.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 1d8b0a9] Update table_candidates and notebooks\n",
+      " 3 files changed, 390 insertions(+), 156 deletions(-)\n",
+      " create mode 100644 scratch.ipynb\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/YehudaDayan99/Business_Segments.git\n",
+      "   3ebc182..1d8b0a9  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Windows / PowerShell\n",
+    "!powershell -NoProfile -ExecutionPolicy Bypass -Command \"cd 'C:\\Users\\yehud\\Business Classification'; git status\"\n",
+    "!powershell -NoProfile -ExecutionPolicy Bypass -Command \"cd 'C:\\Users\\yehud\\Business Classification'; git add -A\"\n",
+    "!powershell -NoProfile -ExecutionPolicy Bypass -Command \"cd 'C:\\Users\\yehud\\Business Classification'; git commit -m 'Update table_candidates and notebooks'\"\n",
+    "!powershell -NoProfile -ExecutionPolicy Bypass -Command \"cd 'C:\\Users\\yehud\\Business Classification'; git push\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9570d643",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "from pprint import pprint\n",
+    "\n",
+    "# Required: SEC compliance user agent (use your real email)\n",
+    "os.environ.setdefault(\"SEC_USER_AGENT\", \"RevenueSegBot/0.1 (your.email@domain.com)\")\n",
+    "\n",
+    "# Required for ReAct pipeline\n",
+    "# Option A: set in your environment before starting Jupyter\n",
+    "# Option B: uncomment and paste your key here (not recommended to commit)\n",
+    "# os.environ[\"OPENAI_API_KEY\"] = \"...\"\n",
+    "\n",
+    "from revseg.pipeline import run_pipeline\n",
+    "\n",
+    "tickers = [\"AAPL\", \"MSFT\", \"GOOGL\", \"AMZN\", \"NVDA\", \"META\", \"AVGO\", \"TSLA\", \"JPM\", \"XOM\"]\n",
+    "\n",
+    "report = run_pipeline(\n",
+    "    tickers=tickers,\n",
+    "    model=\"gpt-4.1-mini\",\n",
+    "    max_react_iters=3,\n",
+    "    out_dir=\"data/outputs\",\n",
+    ")\n",
+    "\n",
+    "# Compact summary\n",
+    "summary = {\n",
+    "    t: {\n",
+    "        \"ok\": r.get(\"ok\"),\n",
+    "        \"segment_year\": r.get(\"segment_year\"),\n",
+    "        \"n_segments\": r.get(\"n_segments\"),\n",
+    "        \"errors\": r.get(\"errors\"),\n",
+    "    }\n",
+    "    for t, r in report.get(\"tickers\", {}).items()\n",
+    "}\n",
+    "\n",
+    "pprint(summary)\n",
+    "print(\"\\nWrote outputs under:\", report.get(\"outputs_dir\"))\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv (3.11.9)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
