Configure SEC_USER_AGENT in scratch notebook; document OPENAI_API_KEY setup

--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -70,13 +70,16 @@
     "import os\n",
     "from pprint import pprint\n",
     "\n",
-    "# Required: SEC compliance user agent (use your real email)\n",
-    "os.environ.setdefault(\"SEC_USER_AGENT\", \"RevenueSegBot/0.1 (your.email@domain.com)\")\n",
+    "# Required: SEC compliance user agent (must include your email)\n",
+    "os.environ.setdefault(\"SEC_USER_AGENT\", \"RevenueSegBot/0.1 (josh.dayan@gmail.com)\")\n",
     "\n",
     "# Required for ReAct pipeline\n",
-    "# Option A: set in your environment before starting Jupyter\n",
-    "# Option B: uncomment and paste your key here (not recommended to commit)\n",
-    "# os.environ[\"OPENAI_API_KEY\"] = \"...\"\n",
+    "# IMPORTANT: do NOT hardcode API keys into notebooks/repos.\n",
+    "# Set OPENAI_API_KEY in your environment before running.\n",
+    "if not os.getenv(\"OPENAI_API_KEY\"):\n",
+    "    raise RuntimeError(\n",
+    "        \"OPENAI_API_KEY is not set. In PowerShell run: $env:OPENAI_API_KEY='...'; then restart the kernel.\"\n",
+    "    )\n",
     "\n",
     "from revseg.pipeline import run_pipeline\n",
     "\n",
